[package]
name = "mbq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
#base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
cliclack = "0.3.5"
console = "0.15.11"
dialoguer = "0.11.0"
directories-next = "2.0.0"
indicatif = "0.17.11"
lettre = { version = "0.11.7", default-features = false, features = ["smtp-transport", "rustls-tls", "tracing", "pool" ] }
#log = "0.4.22"
#log4rs = "1.3.0"
mail-parser = "0.9.3"
maildir = "0.6.4"
ratatui = "0.29.0"
rustyline = "15.0.0"
#rand = "0.8.5"
#ratatui = "0.27.0"
serde = { version = "1.0.203", features = ["derive"] }
shellexpand = "3.1.0"
tap = "1.0.1"
#thiserror = "1.0.61"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
